--- a/mslave/pc/Makefile
+++ b/mslave/pc/Makefile
@@ -8,6 +8,7 @@ CC = gcc
 #CFLAGS = -O2 -Wall -g -fPIC
 #CFLAGS = -Wall -g -fPIC -ansi -pedantic
 CFLAGS = -Wall -g -fPIC
+CFLAGS += -D __PC_TARGET__
 LDFLAGS = 
 INC_DIRS = -I/usr/include -I/usr/local/include -I../ -I../../src/log \
 	-I../../src/lib -I../../src/tools -I../../src/nettcp \
@@ -29,11 +30,12 @@ SRC13 = ../../src/nettcp/bo_cycle_arr.c
 SRC14 = ../../src/nettcp/bo_net_master_core_log.c
 SRC15 = ../../src/nettcp/bo_net_fifo_server.c
 SRC16 = ../../src/nettcp/bo_fifo.c
-SRC17 = ../../src/snmp/bo_asn.c
-SRC18 = ../../src/snmp/bo_parse.c
-SRC19 = ../../src/snmp/bo_snmp.c
-SRC20 = ../../src/snmp/bo_snmp_mng.c
-SRC21 = ../../src/netudp/bo_udp.c
+SRC17 = ../../src/nettcp/bo_fifo_out.c
+SRC18 = ../../src/snmp/bo_asn.c
+SRC19 = ../../src/snmp/bo_parse.c
+SRC20 = ../../src/snmp/bo_snmp.c
+SRC21 = ../../src/snmp/bo_snmp_mng.c
+SRC22 = ../../src/netudp/bo_udp.c
 SRC_SL1 = ../slave/slave.c
 SRC_SL2 = ../slave/ch1_threads.c
 SRC_SL3 = ../slave/ch2_threads.c
@@ -57,11 +59,12 @@ OBJ13 = build/bo_cycle_arr.o
 OBJ14 = build/bo_net_master_core_log.o
 OBJ15 = build/bo_net_fifo_server.o
 OBJ16 = build/bo_fifo.o
-OBJ17 = build/bo_asn.o
-OBJ18 = build/bo_parse.o
-OBJ19 = build/bo_snmp.o
-OBJ20 = build/bo_snmp_mng.o
-OBJ21 = build/bo_udp.o
+OBJ17 = build/bo_fifo_out.o
+OBJ18 = build/bo_asn.o
+OBJ19 = build/bo_parse.o
+OBJ20 = build/bo_snmp.o
+OBJ21 = build/bo_snmp_mng.o
+OBJ22 = build/bo_udp.o
 OBJ_SL1 = build/slave.o
 OBJ_SL2 = build/ch1_threads.o
 OBJ_SL3 = build/ch2_threads.o
@@ -96,6 +99,7 @@ default:
 	$(CC) $(INC_DIRS) $(CFLAGS) -c $(SRC19) -o $(OBJ19)
 	$(CC) $(INC_DIRS) $(CFLAGS) -c $(SRC20) -o $(OBJ20)
 	$(CC) $(INC_DIRS) $(CFLAGS) -c $(SRC21) -o $(OBJ21)
+	$(CC) $(INC_DIRS) $(CFLAGS) -c $(SRC22) -o $(OBJ22)
 
 	$(CC) $(INC_DIRS) $(CFLAGS) -c $(SRC_SL1) -o $(OBJ_SL1)
 	$(CC) $(INC_DIRS) $(CFLAGS) -c $(SRC_SL2) -o $(OBJ_SL2)
@@ -106,13 +110,13 @@ default:
 	$(CC) $(CFLAGS) $(LDFLAGS) $(OBJ1) $(OBJ2) $(OBJ3) $(OBJ4) $(OBJ5) \
 		$(OBJ6) $(OBJ7) $(OBJ8) $(OBJ9) $(OBJ10) $(OBJ11) $(OBJ12) \
 		$(OBJ13) $(OBJ14) $(OBJ15) $(OBJ16) $(OBJ17) $(OBJ18) $(OBJ19) \
-		$(OBJ20) $(OBJ21) \
+		$(OBJ20) $(OBJ21) $(OBJ22) \
 		$(OBJ_SL1) $(OBJ_SL2) $(OBJ_SL3) $(OBJ_SL4) \
 		$(OBJ_T1) -o $(T1) -lpthread
 
 clean:
 	rm -f $(OBJ1) $(OBJ2) $(OBJ3) $(OBJ4) $(OBJ5) $(OBJ6) $(OBJ7) $(OBJ8) \
 		$(OBJ9) $(OBJ10) $(OBJ11) $(OBJ12) $(OBJ13) $(OBJ14) $(OBJ15) \
-		$(OBJ16) $(OBJ17) $(OBJ18) $(OBJ19) $(OBJ20) $(OBJ21)
+		$(OBJ16) $(OBJ17) $(OBJ18) $(OBJ19) $(OBJ20) $(OBJ21) $(OBJ22)
 	rm -f $(OBJ_SL1) $(OBJ_SL2) $(OBJ_SL3) $(OBJ_SL4) $(OBJ_T1) $(T1)
 
