modified:   emuls/uso/uso_threads.c 	modified:   mslave/moxa/Makefile 	modified:   mslave/slave/ch1_threads.c 	modified:   mslave/slave/ch2_threads.c 	modified:   mslave/slave/slave.c 	modified:   src/lib/serial.c

--- a/mslave/moxa/Makefile
+++ b/mslave/moxa/Makefile
@@ -39,6 +39,7 @@ SRC20 = ../../src/snmp/bo_parse.c
 SRC21 = ../../src/snmp/bo_snmp.c
 SRC22 = ../../src/snmp/bo_snmp_mng.c
 SRC23 = ../../src/netudp/bo_udp.c
+SRC24 = ../../src/nettcp/bo_send_lst.c
 SRC_SL1 = ../slave/slave.c
 SRC_SL2 = ../slave/ch1_threads.c
 SRC_SL3 = ../slave/ch2_threads.c
@@ -69,6 +70,7 @@ OBJ20 = build/bo_parse.o
 OBJ21 = build/bo_snmp.o
 OBJ22 = build/bo_snmp_mng.o
 OBJ23 = build/bo_udp.o
+OBJ24 = build/bo_send_lst.o
 OBJ_SL1 = build/slave.o
 OBJ_SL2 = build/ch1_threads.o
 OBJ_SL3 = build/ch2_threads.o
@@ -105,6 +107,7 @@ default:
 	$(CC) $(INC_DIRS) $(CFLAGS) -c $(SRC21) -o $(OBJ21)
 	$(CC) $(INC_DIRS) $(CFLAGS) -c $(SRC22) -o $(OBJ22)
 	$(CC) $(INC_DIRS) $(CFLAGS) -c $(SRC23) -o $(OBJ23)
+	$(CC) $(INC_DIRS) $(CFLAGS) -c $(SRC24) -o $(OBJ24)
 
 	$(CC) $(INC_DIRS) $(CFLAGS) -c $(SRC_SL1) -o $(OBJ_SL1)
 	$(CC) $(INC_DIRS) $(CFLAGS) -c $(SRC_SL2) -o $(OBJ_SL2)
@@ -115,7 +118,7 @@ default:
 	$(CC) $(CFLAGS) $(LDFLAGS) $(OBJ1) $(OBJ2) $(OBJ3) $(OBJ4) $(OBJ5) \
 		$(OBJ6) $(OBJ7) $(OBJ8) $(OBJ9) $(OBJ10) $(OBJ11) $(OBJ12) \
 		$(OBJ13) $(OBJ14) $(OBJ15) $(OBJ16) $(OBJ17) $(OBJ18) $(OBJ19) \
-		$(OBJ20) $(OBJ21) $(OBJ22) $(OBJ23) \
+		$(OBJ20) $(OBJ21) $(OBJ22) $(OBJ23) $(OBJ24) \
 		$(OBJ_SL1) $(OBJ_SL2) $(OBJ_SL3) $(OBJ_SL4) \
 		$(OBJ_T1) -o $(T1) -lpthread
 
@@ -123,6 +126,6 @@ clean:
 	rm -f $(OBJ1) $(OBJ2) $(OBJ3) $(OBJ4) $(OBJ5) $(OBJ6) $(OBJ7) \
 		$(OBJ8) $(OBJ9) $(OBJ10) $(OBJ11) $(OBJ12) $(OBJ13) $(OBJ14) \
 		$(OBJ15) $(OBJ16) $(OBJ17) $(OBJ18) $(OBJ19) \
-		$(OBJ20) $(OBJ21) $(OBJ22) $(OBJ23)
+		$(OBJ20) $(OBJ21) $(OBJ22) $(OBJ23) $(OBJ24)
 	rm -f $(OBJ_SL1) $(OBJ_SL2) $(OBJ_SL3) $(OBJ_SL4) $(OBJ_T1) $(T1)
 
