--- a/master/Makefile
+++ b/master/Makefile
@@ -9,6 +9,7 @@ LDFLAGS	     = -Wl, -elf2flt -lpthread
 CFLAGS		     = -Wall -c -g 
 
 # Выводит отлад инфу в терминал
+CFLAGS		     += -D __MOXA__ 
 CFLAGS		     += -D __PRINT__ 
 CFLAGS		     += -D __PRINT_TAB_ROUTE__
 # =========================================
@@ -68,8 +69,8 @@ default:
 #memtrace:
 #	MALLOC_TRACE=trace.log $(TARGET)
 #	mtrace $(TARGET) trace.log
-	
+
 clean:
 	rm -R build
 	mkdir build
-	
+
