modified:   master/master.cfg 	modified:   moxa_serv/moxa_serv.cfg 	modified:   src/log/bologging.c

--- a/moxa_serv/moxa_serv.cfg
+++ b/moxa_serv/moxa_serv.cfg
@@ -9,5 +9,5 @@
 
 [log]
  file = moxa_serv.log  # лог файл
- file_log = moxa_serv.log(old)
+ file_old = moxa_serv.log(old)
  maxrow = 1000         # макс колво строк в лог файле
