modified:   master/Makefile 	modified:   src/log/bologging.c 	modified:   src/nettcp/bo_net.c 	modified:   src/nettcp/bo_net_master.c 	modified:   src/nettcp/bo_net_master_core.c 	modified:   src/nettcp/bo_net_master_core_log.c 	modified:   test/botest/Makefile 	modified:   test/master/test_runners/Test_master_Runners.c 	modified:   test/master/testmaster.c

--- a/test/botest/Makefile
+++ b/test/botest/Makefile
@@ -51,6 +51,7 @@ SRC5 = \
     ../master/testmaster.c \
     ../../src/log/bologging.c \
     ../../src/nettcp/bo_net.c \
+    ../../src/nettcp/bo_send_lst.c\
     ../../src/tools/ocrc.c \
     ../../src/tools/oht.c \
     ../../src/nettcp/bo_net_master_core.c \
