--- a/master/Makefile
+++ b/master/Makefile
@@ -1,17 +1,17 @@
 TARGET		     = build/master
 # ========== for Moxa ====================
-CC	     = arm-elf-gcc
-LDFLAGS	     = -Wl, -elf2flt -lpthread
+#CC	     = arm-elf-gcc
+#LDFLAGS	     = -Wl, -elf2flt -lpthread
 # ========== for PC   ====================
-#CC = gcc
-#LDFLAGS		     = -lpthread
+CC = gcc
+LDFLAGS		     = -lpthread
 # ========================================
 CFLAGS		     = -Wall -c -g 
 
 # Выводит отлад инфу в терминал
 CFLAGS		     += -D __MOXA__
 CFLAGS		     += -D __PRINT__ 
-CFLAGS		     += -D __PRINT_TAB_ROUTE__
+#CFLAGS		     += -D __PRINT_TAB_ROUTE__
 # =========================================
 
 INC_DIR		     = -I../src/log -I../src/tools -I../src/nettcp -I../mslave/slave
