modified:   master/Makefile 	modified:   mslave/moxa/Makefile 	modified:   mslave/slave/ch1_threads.c 	modified:   src/tools/ocs.c

--- a/master/Makefile
+++ b/master/Makefile
@@ -7,7 +7,7 @@ CC = gcc
 LDFLAGS		     = -lpthread
 # ========================================
 CFLAGS		     = -Wall -c -g 
-#CFLAGS		     += -mfpmath=sse -Ofast -flto -march=native -funroll-loops
+CFLAGS		     += -m32 -mfpmath=sse -Ofast -flto -march=native -funroll-loops
 # Выводит отлад инфу в терминал
 CFLAGS		     += -D __MOXA__
 CFLAGS		     += -D __PRINT__ 
