--- a/master/Makefile
+++ b/master/Makefile
@@ -1,16 +1,18 @@
 TARGET		     = build/master
 # ========== for Moxa ====================
-#CC = arm-elf-gcc
-#LDFLAGS	     = -Wl, -elf2flt -lpthread
+CC	     = arm-elf-gcc
+LDFLAGS	     = -Wl, -elf2flt -lpthread
 # ========== for PC   ====================
-CC = gcc
-LDFLAGS		     = -lpthread
+#CC = gcc
+#LDFLAGS		     = -lpthread
 # ========================================
 CFLAGS		     = -Wall -c -g 
-
+CFLAGS              += -O3 -mapcs-32
+#CFLAGS		     += -m32 -mfpmath=sse -Ofast -flto -march=native -funroll-loops
 # Выводит отлад инфу в терминал
+CFLAGS		     += -D __MOXA__
 CFLAGS		     += -D __PRINT__ 
-CFLAGS		     += -D __PRINT_TAB_ROUTE__
+#CFLAGS		     += -D __PRINT_TAB_ROUTE__
 # =========================================
 
 INC_DIR		     = -I../src/log -I../src/tools -I../src/nettcp -I../mslave/slave
@@ -28,6 +30,7 @@ SRC9   = ../src/tools/ocrc.c
 SRC10  = ../src/tools/ort.c
 SRC11  = ../src/nettcp/bo_cycle_arr.c
 SRC12  = ../src/nettcp/bo_net_master_core_log.c
+SRC13  = ../src/nettcp/bo_send_lst.c
 
 OBJ    = build/main.o
 OBJ1   = build/bologging.o
@@ -42,6 +45,7 @@ OBJ9   = build/ocrc.o
 OBJ10  = build/ort.o
 OBJ11  = build/bo_cycle_arr.o
 OBJ12  = build/bo_net_master_core_log.o
+OBJ13  = build/bo_send_lst.o
 
 default:
 	$(CC) $(INC_DIR) $(CFLAGS) $(SRC1)  -o $(OBJ1)
@@ -56,17 +60,18 @@ default:
 	$(CC) $(INC_DIR) $(CFLAGS) $(SRC10) -o $(OBJ10)
 	$(CC) $(INC_DIR) $(CFLAGS) $(SRC11) -o $(OBJ11)
 	$(CC) $(INC_DIR) $(CFLAGS) $(SRC12) -o $(OBJ12)
+	$(CC) $(INC_DIR) $(CFLAGS) $(SRC13) -o $(OBJ13)
 
 	$(CC) $(INC_DIR) $(CFLAGS) $(SRC)  -o $(OBJ)
 	$(CC) $(LDFLAGS) -g   $(OBJ1) $(OBJ2) $(OBJ3) $(OBJ4) \
 	      $(OBJ5) $(OBJ6) $(OBJ7) $(OBJ8) $(OBJ9) $(OBJ10) \
-	      $(OBJ11) $(OBJ12) $(OBJ) -o $(TARGET)
+	      $(OBJ11) $(OBJ12) $(OBJ13) $(OBJ) -o $(TARGET)
 
 #memtrace:
 #	MALLOC_TRACE=trace.log $(TARGET)
 #	mtrace $(TARGET) trace.log
-	
+
 clean:
 	rm -R build
 	mkdir build
-	
+
