--- a/master/master.cfg
+++ b/master/master.cfg
@@ -8,7 +8,7 @@ max_connect = 255      # макс число устр(Moxa), которые мо
   
 [log]
 file     = master_route.log       # лог файл
-file_log = master_route.log(old)
+file_old = master_route_old.log
 maxrow   = 1000                   # макс колво строк в лог файле
 
 [log_pr]
