--- a/mslave/moxa/Makefile
+++ b/mslave/moxa/Makefile
@@ -4,12 +4,13 @@
 
 
 CC = arm-elf-gcc
-CFLAGS = -O2 -fomit-frame-pointer -fno-builtin -fpic -msingle-pic-base
+#CFLAGS = -O2 -fomit-frame-pointer -fno-builtin -fpic -msingle-pic-base
+CFLAGS  = -O3 -mapcs-32
 CFLAGS += -D __MOXA_TARGET__
 #CFLAGS += -D __WDT__
 CFLAGS += -D __PRINT__
-CFLAGS += -D __MOXA__
-CFLAGS += -D __PRINT_FIFO__
+#CFLAGS += -D __MOXA__
+#CFLAGS += -D __PRINT_FIFO__
 
 LDFLAGS =  -Wl,-elf2flt="-r -z -s 32768"
 INC_DIRS = -I/usr/local/arm-elf/include -I../ -I../../src/log \
@@ -39,6 +40,7 @@ SRC20 = ../../src/snmp/bo_parse.c
 SRC21 = ../../src/snmp/bo_snmp.c
 SRC22 = ../../src/snmp/bo_snmp_mng.c
 SRC23 = ../../src/netudp/bo_udp.c
+SRC24 = ../../src/nettcp/bo_send_lst.c
 SRC_SL1 = ../slave/slave.c
 SRC_SL2 = ../slave/ch1_threads.c
 SRC_SL3 = ../slave/ch2_threads.c
@@ -69,6 +71,7 @@ OBJ20 = build/bo_parse.o
 OBJ21 = build/bo_snmp.o
 OBJ22 = build/bo_snmp_mng.o
 OBJ23 = build/bo_udp.o
+OBJ24 = build/bo_send_lst.o
 OBJ_SL1 = build/slave.o
 OBJ_SL2 = build/ch1_threads.o
 OBJ_SL3 = build/ch2_threads.o
@@ -105,6 +108,7 @@ default:
 	$(CC) $(INC_DIRS) $(CFLAGS) -c $(SRC21) -o $(OBJ21)
 	$(CC) $(INC_DIRS) $(CFLAGS) -c $(SRC22) -o $(OBJ22)
 	$(CC) $(INC_DIRS) $(CFLAGS) -c $(SRC23) -o $(OBJ23)
+	$(CC) $(INC_DIRS) $(CFLAGS) -c $(SRC24) -o $(OBJ24)
 
 	$(CC) $(INC_DIRS) $(CFLAGS) -c $(SRC_SL1) -o $(OBJ_SL1)
 	$(CC) $(INC_DIRS) $(CFLAGS) -c $(SRC_SL2) -o $(OBJ_SL2)
@@ -115,7 +119,7 @@ default:
 	$(CC) $(CFLAGS) $(LDFLAGS) $(OBJ1) $(OBJ2) $(OBJ3) $(OBJ4) $(OBJ5) \
 		$(OBJ6) $(OBJ7) $(OBJ8) $(OBJ9) $(OBJ10) $(OBJ11) $(OBJ12) \
 		$(OBJ13) $(OBJ14) $(OBJ15) $(OBJ16) $(OBJ17) $(OBJ18) $(OBJ19) \
-		$(OBJ20) $(OBJ21) $(OBJ22) $(OBJ23) \
+		$(OBJ20) $(OBJ21) $(OBJ22) $(OBJ23) $(OBJ24) \
 		$(OBJ_SL1) $(OBJ_SL2) $(OBJ_SL3) $(OBJ_SL4) \
 		$(OBJ_T1) -o $(T1) -lpthread
 
@@ -123,6 +127,6 @@ clean:
 	rm -f $(OBJ1) $(OBJ2) $(OBJ3) $(OBJ4) $(OBJ5) $(OBJ6) $(OBJ7) \
 		$(OBJ8) $(OBJ9) $(OBJ10) $(OBJ11) $(OBJ12) $(OBJ13) $(OBJ14) \
 		$(OBJ15) $(OBJ16) $(OBJ17) $(OBJ18) $(OBJ19) \
-		$(OBJ20) $(OBJ21) $(OBJ22) $(OBJ23)
+		$(OBJ20) $(OBJ21) $(OBJ22) $(OBJ23) $(OBJ24)
 	rm -f $(OBJ_SL1) $(OBJ_SL2) $(OBJ_SL3) $(OBJ_SL4) $(OBJ_T1) $(T1)
 
