modified:   INSTALL/create_nodes_cfg 	modified:   INSTALL/master 	modified:   INSTALL/mslave 	modified:   INSTALL/mslave.cfg.in 	modified:   INSTALL/mslave_192.168.100.128.cfg 	modified:   INSTALL/mslave_192.168.100.129.cfg 	modified:   emuls/uso/uso_threads.c 	modified:   mslave/mslave.c 	modified:   mslave/slave/slave.c 	modified:   mslave/slave/slave.h

--- a/INSTALL/mslave.cfg.in
+++ b/INSTALL/mslave.cfg.in
@@ -85,7 +85,8 @@ echo "Tscan = 20" >> $cfgfile
 
 # Таймаут приема кадра на сети RS485
 # Tout(20)*1000us= 20ms
-echo "Tout = 60" >> $cfgfile
+echo "Tout = 150" >> $cfgfile
+echo "Tout_scan = 30" >> $cfgfile
 
 # Число попыток передачи кадра по сети RS485
 echo "nRetries = 3" >> $cfgfile
