--- a/INSTALL/mslave_192.168.100.129.cfg
+++ b/INSTALL/mslave_192.168.100.129.cfg
@@ -3,7 +3,8 @@
 log = /mnt/ramdisk/mslave.log
 log_old = /mnt/ramdisk/mslave-old.log
 Tscan = 20
-Tout = 60
+Tout = 150
+Tout_scan = 30
 nRetries = 3
 
 [WDT]
@@ -48,15 +49,15 @@ speed = 19200
 port = 1
 adr = 128
 enable = 1
-dstBeg = 131
-dstEnd = 131
+dstBeg = 129
+dstEnd = 132
 
 [RS485_2]
 port = 2
 adr = 128
 enable = 1
-dstBeg = 2
-dstEnd = 2
+dstBeg = 1
+dstEnd = 4
 
 [LS]
 gen = General
