--- a/mslave/moxa/Makefile
+++ b/mslave/moxa/Makefile
@@ -7,7 +7,7 @@ CC = arm-elf-gcc
 #CFLAGS = -O2 -fomit-frame-pointer -fno-builtin -fpic -msingle-pic-base
 CFLAGS  = -O3 -mapcs-32
 CFLAGS += -D __MOXA_TARGET__
-#CFLAGS += -D __WDT__
+CFLAGS += -D __WDT__
 CFLAGS += -D __PRINT__
 #CFLAGS += -D __MOXA__
 #CFLAGS += -D __PRINT_FIFO__
